Add test pergen instructions to the root pom.xml