@@ -41,6 +41,9 @@ We need to ask you to download some libs prior to doing a full build:
    mvn clean install -f pom-libs.xml
    cd ../..
 
+Our maven tests require a bit more memory:
+   export MAVEN_OPTS="-Xmx512m -XX:MaxPermSize=128m"
+
 Once that is done you can a normal build on the command line:
    mvn install -Dall
 
